# Codrop

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  post.txt  short.txt
.github/workflows/: ci.yml  release.yml
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/sync-engine/: Cargo.toml
crates/sync-engine/src/: engine.rs  ignore.rs  index.rs  lib.rs  store.rs  vclock.rs
crates/sync-engine/tests/: integration.rs
crates/transport/: Cargo.toml
crates/transport/src/: discovery.rs  lib.rs  main.rs  node.rs  proto.rs  tls.rs
crates/transport/tests/: sync.rs
crates/watcher-daemon/: Cargo.toml
crates/watcher-daemon/src/: main.rs
