[package]
name = "codrop-sync-engine"
description = "Codrop Phase 1: content-addressed store, SQLite index, vector clocks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
name = "codrop_sync_engine"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
fastcdc.workspace = true
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true
