[package]
name = "codrop-transport"
description = "Codrop Phase 2: iroh p2p transport (hole-punch + relay), index/blob sync."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "codrop_transport"
path = "src/lib.rs"

[[bin]]
name = "codrop-net"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
codrop-sync-engine.workspace = true
tokio.workspace = true
iroh.workspace = true
rustls.workspace = true   # only to install the ring crypto provider iroh needs

[dev-dependencies]
tempfile.workspace = true
