[package]
name = "codrop-watchd"
description = "Codrop stepping stone: a debounced cross-platform file-watcher daemon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false   # Phase-0 stepping stone, superseded by `codrop` — never publish to crates.io

[[bin]]
name = "codrop-watchd"
path = "src/main.rs"

# The standalone watcher was the Phase-0 stepping stone, superseded by `codrop` — don't ship it.
[package.metadata.dist]
dist = false

[dependencies]
notify.workspace = true
notify-debouncer-full.workspace = true
blake3.workspace = true
anyhow.workspace = true
codrop-sync-engine.workspace = true
